[package]
name = "embedded-graphics-coordinate-transform"
version = "0.1.1"
edition = "2024"
description = "Wrappers for rotating, mirroring, and transposing embedded graphics displays"
repository = "https://github.com/msvisser/embedded-graphics-coordinate-transform"
license = "MIT OR Apache-2.0"
keywords = ["embedded-graphics", "rotate", "mirror", "embedded"]
categories = ["embedded", "no-std"]
exclude = ["/assets"]

[dependencies]
embedded-graphics-core = "0.4.0"

[dev-dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.8.0"
